created a new file

--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
 <!doctype html>
-
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <title>Grid</title>
+  <style>
+    .wrapper{
+      display:grid;
+      grid-template-columns: 70% 30%;
+      grid-column-gap: 1em;
+      grid-row-gap: 1em;
+    }
+    .wrapper > div{
+      background: #eee;
+      padding: 1em;
+    }
+    .wrapper > div:nth-child(odd){
+      background: #ddd;
+    }
+  </style>
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <div class="wrapper">
+    <div>
+      If all of this may seem confounding to you, that's because it is! What does it really mean to exploit wirelessly. Quick: do you have a virally-distributed plan of action for managing emerging partnerships? Without data hygiene supervising, you will lack architectures. We apply the proverb 'Look before you leap' not only on our feature set, but our strategic angel investors and user-proof configuration is usually considered an amazing achievement. Our infinitely reconfigurable feature set is unparalleled, but our sexy raw bandwidth and easy use is invariably considered a remarkable achievement taking into account this month's financial state of things! If all of this sounds astonishing to you, that's because it is! Quick: do you have a plan to become proactive. We apply the proverb 'A rolling stone gathers no moss' not only to our front-end process management but our capability to implement. We will unleash the aptitude of mindshare to empower. Our infinitely reconfigurable feature set is unmatched in the industry, but our C2C2C paradigms and easy use is invariably considered a remarkable achievement. In order to assess the 3rd generation blockchain’s ability to whiteboard without lessening our power to benchmark. Quick: do you have a infinitely reconfigurable scheme for coping with emerging methodologies? Is it more important for something to be dynamic or to be customer-directed? What does the buzzword 'technologies' really mean? Think nano-back-end, customized.
+    </div>
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum nulla molestias, illum eius quisquam eum autem velit ullam, labore beatae sit distinctio error obcaecati sunt. Accusamus culpa beatae reiciendis tempora.
+    </div>
+    <div>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident libero, eaque ipsum, officia quibusdam consequatur nostrum odit saepe culpa vel illo autem magni aperiam quod, alias repudiandae? In numquam rem voluptate iusto officia vero laudantium itaque, a dicta. Suscipit quis quas nulla saepe asperiores? Eum, molestias deleniti pariatur amet recusandae eos velit aliquid aut corporis ipsa sint soluta vitae fugit qui excepturi beatae repudiandae molestiae. Nobis unde pariatur quidem magni fuga rem ex velit! Earum, nobis voluptate cumque distinctio ea molestiae ipsum nisi illum, laborum voluptatibus, sequi maxime soluta beatae dicta atque labore voluptatum tempore quam repudiandae ipsa quaerat fugiat?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus vero repudiandae sed ex voluptates facere ab qui. Vel praesentium ab magnam ea repellat ipsa possimus expedita dolor iure rem consectetur alias illo tempora vitae amet exercitationem nihil maiores, deserunt deleniti facilis sunt dolores in quisquam nulla? Possimus voluptatum veniam doloribus!
+    </div>
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis consequuntur, ea non, accusamus voluptatum temporibus mollitia odio cumque ullam omnis nemo quas neque laudantium unde? Dignissimos quibusdam est dolorum non.
+    </div>
+  </div>
 </body>
+
 </html>
